[package]
name = "apalis-board-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
actix = "0.13.3"
uuid = { version = "1.8", features = ["v4", "serde"] }
shared = { package = "apalis-board-shared", path = "../shared" }
apalis-core = { version = "0.6.0-rc.3", git = "https://github.com/geofmureithi/apalis", branch = "chore/v0.6.0" }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
tokio = "1"
unescape = "0.1.0"
