[package]
name = "apalis-chirp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
figment = { version = "0.10", features = ["yaml"] }
serde = "1"
serde_json = "1"
cron = "0.11.0"
apalis = { version = "0.6.0-rc.8", git = "https://github.com/geofmureithi/apalis", branch = "chore/v0.6.0", features = [
    "retry",
    "limit",
    "catch-panic"
] }
apalis-redis = { version = "0.6.0-rc.8", git = "https://github.com/geofmureithi/apalis", branch = "chore/v0.6.0" }
apalis-sql = { version = "0.6.0-rc.8", git = "https://github.com/geofmureithi/apalis", branch = "chore/v0.6.0", features = [
    "mysql",
    "postgres",
    "sqlite",
] }
apalis-cron = { version = "0.6.0-rc.8", git = "https://github.com/geofmureithi/apalis", branch = "chore/v0.6.0" }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4" }
shlex = "1.3.0"
chrono = "0.4"
clap = { version = "4.5.7", features = ["derive"] }
backend = { path = "../backend", package = "apalis-board-backend" }
actix-web = "4"
futures = "0.3"
actix-cors = "0.6.1"
async-process = "2.2.3"
bollard = "0.16"
tracing-subscriber = { version = "0.3.11", features = ["json", "env-filter"] }


[dependencies.tracing]
default-features = false
version = "0.1"
