[package]
name = "apalis-board-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hirola = { version = "0.4", features = ["dom"] }
web-sys = { version = "0.3", features = ["EventSource"] }
gloo-net = { version = "0.5" }
shared = { path = "../shared", package = "apalis-board-shared", default-features = false }
serde_json = "1"
console_log = { version = "1", features = ["color"] }
log = "0.4"
strum = "0.26"
serde = "1"
