[package]
name = "apalis-board-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apalis-core = { version = "0.5.2", git = "https://github.com/geofmureithi/apalis", branch = "fix/better-api" }
apalis-redis = { version = "0.5.2", git = "https://github.com/geofmureithi/apalis", branch = "fix/better-api", optional = true }
apalis-sql = { version = "0.5.2", git = "https://github.com/geofmureithi/apalis", branch = "fix/better-api", optional = true }
serde = "1"
redis = "0.25"



[features]
default = ["redis"]
redis = ["apalis-redis"]
postgres = ["apalis-sql/postgres"]
sqlite = ["apalis-sql/sqlite"]
mysql = ["apalis-sql/mysql"]


