[package]
name = "apalis-board-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apalis-core = { version = "0.6.0-rc.3", git = "https://github.com/geofmureithi/apalis", branch = "chore/v0.6.0", default-features = false }
apalis-redis = { version = "0.6.0-rc.3", git = "https://github.com/geofmureithi/apalis", branch = "chore/v0.6.0", optional = true }
apalis-sql = { version = "0.6.0-rc.3", git = "https://github.com/geofmureithi/apalis", branch = "chore/v0.6.0", optional = true }
serde = "1"
serde_json = "1"
redis = { version = "0.25", optional = true }
strum = { version = "0.26", features = ["derive"] }

[dependencies.sqlx]
version = "0.7.4"
default-features = false
optional = true


[features]
default = ["sqlite"]
redis = ["apalis-redis", "dep:redis"]
postgres = ["apalis-sql/postgres"]
sqlite = ["apalis-sql/sqlite", "sqlx/sqlite", "sqlx/json"]
mysql = ["apalis-sql/mysql"]
