[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apalis = { version = "0.6.0-rc.8", git = "https://github.com/geofmureithi/apalis", branch = "chore/v0.6.0", features = [
    "limit",
] }
apalis-redis = { version = "0.6.0-rc.8", git = "https://github.com/geofmureithi/apalis", branch = "chore/v0.6.0" }
apalis-sql = { version = "0.6.0-rc.8", git = "https://github.com/geofmureithi/apalis", branch = "chore/v0.6.0", features = [
    "sqlite",
] }
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
actix = "0.13.3"
backend = { package = "apalis-board-backend", path = "../../crates/backend" }
serde = "1"
env_logger = "0.11"
futures = "0.3"
actix-cors = "0.7"
tower = "0.4"
